fix horizontal scrollbar in personal settings caused by federated cloud ID section

--- a/apps/files_sharing/css/settings-personal.css
+++ b/apps/files_sharing/css/settings-personal.css
@@ -4,6 +4,7 @@
 
 #fileSharingSettings xmp {
 	margin-top: 0;
+	white-space: pre-wrap;
 }
 
 [class^="social-"], [class*=" social-"] {
